--- a/kubernetes-manifest-files/backend-k8-manifest/deployment.yml
+++ b/kubernetes-manifest-files/backend-k8-manifest/deployment.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: todo-backend
-          image: swapnaswapna/backend-java-todo-app:6
+          image: swapnaswapna/backend-java-todo-app:latest
           imagePullPolicy: Always  
           ports:
             - containerPort: 8080
